src/test/deca/syntax/parser/invalid/class_extends_wrong_keyword.deca
// Parser test, keyword "etends" instead of "extends"

class A {

}

class B etends A {

}